use uris for filename extraction